# BNCT-Imaging-Project

./: BNCT.cc  CMakeLists.txt  README.md
headers/: ActionInitialization.hh  DetectorConstruction.hh  DetectorParameterDef.hh  DummySD.hh  EventAction.hh  HistoManager.hh  PixelHit.hh  PixelROGeometry.hh  PixelSD.hh  RunAction.hh  SteppingAction.hh
source/: BNCT.cc  CMakeLists.txt  init.mac
source/headers/: ActionInitialization.hh  DetectorConstruction.hh  DetectorParameterDef.hh  DummySD.hh  EventAction.hh  HistoManager.hh  PixelHit.hh  PixelHitsCollection.hh  PixelParameterisation.hh.backup  PixelROGeometry.hh  PixelSD.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh.backup
source/sources/: ActionInitialization.cc  DetectorConstruction.cc  DetectorParameterDef.icc  EventAction.cc  HistoManager.cc  PixelHit.cc  PixelParameterisation.cc.backup  PixelROGeometry.cc  PixelSD.cc  RunAction.cc  SteppingAction.cc.backup
sources/: ActionInitialization.cc  DetectorConstruction.cc  DetectorParameterDef.icc  EventAction.cc  HistoManager.cc  PixelHit.cc  PixelROGeometry.cc  PixelSD.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
working/: BNCT  CMakeCache.txt  init.mac
